changed .get and .remove for better time complexity